# Ocean-simulation-with-gestner-wave

./: CMakeLists.txt  README.md  sampleConfig.h.in
Ocean/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshKernel.cu  MeshKernel.h  Plane.h  ProjectedGrid.cpp  ProjectedGrid.h  RTStateObject.cpp  RTStateObject.h  Wave.h  WaveMesh.cpp  WaveMesh.h  ocean.cpp  ocean.cu  ocean.h
cuda/: BufferView.h  GeometryData.h  Light.h  LocalGeometry.h  MaterialData.h  random.h  util.h  whitted.cu  whitted.h
support/: CMakeLists.txt
support/GLFW/src/: context.c
support/imgui/: imgui_demo.cpp
sutil/: Aabb.h  CMakeLists.txt  CUDAOutputBuffer.h  Camera.cpp  Camera.h  Exception.h  GLDisplay.cpp  Matrix.h  MeshGroup.h  Scene.cpp  Scene.h  sutil.cpp  sutil.h  sutilapi.h  vec_math.h
